--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint pages/**/*.js templates/**/*.js"
   },
   "dependencies": {
+    "@contentstack/live-preview-utils": "^1.0.1",
     "contentstack": "^3.13.3",
     "html-react-parser": "^1.4.0",
     "json-viewer-js": "^1.0.7",
