--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 CONTENTSTACK_API_KEY=blt19354e73f1681431
 CONTENTSTACK_DELIVERY_TOKEN=cs572af02f7d30f661cb7d1790
 CONTENTSTACK_ENVIRONMENT=production
+CONTENTSTACK_MANAGEMENT_TOKEN=cse171f54eb309472241cae5c8
 
 # For setting region add  CONTENTSTACK_REGION=(Optional for US region) Eg- eu
 # For setting custom host add CONTENTSTACK_CUSTOM_HOST=(Optional)
