--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint pages/**/*.js templates/**/*.js"
   },
   "dependencies": {
+    "@contentstack/json-rte-serializer": "^1.0.2",
     "@contentstack/live-preview-utils": "^1.0.1",
     "contentstack": "^3.15.0",
     "html-react-parser": "^1.4.0",
